--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=e2ac4a56d1ea6f5b1ad2bc9498946831
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://becode:becode@127.0.0.1:3306/tdd?serverVersion=5.7"
+DATABASE_URL="mysql://becode:becode@127.0.0.1:3306/tdd?serverVersion=mariadb-10.4.1"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
